update .dijitDialog with padding so setting focus to dialog title does NOT cause horizontal scroll.  final a11y changes -  fixes #2505
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@9241 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -1110,6 +1110,7 @@ body .dijitAlignClient { position: absolute; }
 .dijitDialog {
 	position: absolute;
 	z-index: 999;
+	padding: 1px;
 }
 
 .dijitDialogUnderlayWrapper {
